--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
+  },
+  "volta": {
+    "node": "18.14.2"
   }
 }
